--- a/index.html
+++ b/index.html
@@ -13,8 +13,22 @@
 </head>
 
 <body>
-    <h1>Welcome To </h1>
-    <h1>Piash Deb's website</h1>
+    <section class="top-banner">
+        <div class="half-width">
+            <h1>Welcome To </h1>
+            <h1> <span class="yellow">Piash Deb's</span> website</h1>
+            <h3>Web Developer & Photographer</h3>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Omnis dignissimos neque esse expedita est quae
+                necessitatibus cupiditate amet aperiam, repellat quaerat enim deserunt alias ducimus laborum voluptatem
+                non.
+                Quod, in?
+            </p>
+            <a class="link-button" target="_blank" href="https://www.linkedin.com/in/piash-deb-33021a1b3/">Hire Me</a>
+        </div>
+        <div class="half-width">
+            <img src=" images/1.png" alt="picture of Piash deb">
+        </div>
+    </section>
 </body>
 
 </html>
