--- a/index.html
+++ b/index.html
@@ -29,6 +29,20 @@
             <img src=" images/1.png" alt="picture of Piash deb">
         </div>
     </section>
+    <section class="dream-big">
+        <div class="half-width">
+            <img src="images/2.png" alt="jhonker">
+        </div>
+        <div class="half-width">
+            <h1>Dream Big</h1>
+            <h2>Become a Web Developer</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic, necessitatibus, corporis tempore autem
+                saepe provident repellendus consectetur odit blanditiis adipisci eum quisquam perspiciatis excepturi
+                doloremque atque ea facilis accusamus fugiat.</p>
+            <a class="link-button1" target="_blank" href="">Download CV</a>
+        </div>
+
+    </section>
 </body>
 
 </html>
