--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
 </head>
 
 <body>
-    <section class="top-banner">
+    <section class="top-banner flrexible-container">
         <div class="half-width">
             <h1>Welcome To </h1>
-            <h1> <span class="yellow">Piash Deb's</span> website</h1>
+            <h1> <span class="orange-color">Piash Deb's</span> website</h1>
             <h3>Web Developer & Photographer</h3>
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Omnis dignissimos neque esse expedita est quae
                 necessitatibus cupiditate amet aperiam, repellat quaerat enim deserunt alias ducimus laborum voluptatem
@@ -29,7 +29,7 @@
             <img src=" images/1.png" alt="picture of Piash deb">
         </div>
     </section>
-    <section class="dream-big">
+    <section class="dream-big flrexible-container">
         <div class="half-width">
             <img src="images/2.png" alt="jhonker">
         </div>
@@ -43,6 +43,29 @@
         </div>
 
     </section>
+    <section class="experience-aria">
+        <h1>Experiences</h1>
+        <div class="flrexible-container">
+            <div id="full-stack-exp" class="experience-item">
+                <h2>Full Stack Web Developer</h2>
+                <h3 class="orange-color">2022-present | Pro Level Developer</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laborum dicta fugit dolore earum
+                    accusantium
+                    saepe delectus? Quas officiis veniam atque nihil minima ab ullam, adipisci alias deleniti cupiditate
+                    quod recusandae!</p>
+            </div>
+            <div id="web-dev-exp" class="experience-item">
+                <h2>Baby Web Developer</h2>
+                <h3 class="orange-color">2020-2021 | Programming Hero Learner</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus nihil nulla, exercitationem
+                    provident nobis explicabo obcaecati, dolores accusamus soluta veritatis suscipit voluptatibus dolor
+                    blanditiis repellendus eveniet dignissimos odit modi nostrum.</p>
+            </div>
+        </div>
+    </section>
+    <footer>
+        <p>All rights reserved | This website is made by Piash Deb</p>
+    </footer>
 </body>
 
 </html>
